[package]
name = "mi2mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.10.0"
btleplug = "0.10.3"
clap = { version = "4.0.22", features = ["derive"] }
futures = "0.3.25"
rumqttc = { version = "0.17.0", features = ["url"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
uuid = "1.2.1"
